# mbot_autopack

./: .clang-format  README.md  build.sh  kill.sh  log.txt
img/: map.pgm  map.yaml
install/: local_setup.sh  setup.sh
install/control/lib/control/: control_node
install/control/share/ament_index/resource_index/parent_prefix_path/: control
install/control/share/control/: local_setup.sh  package.sh
install/mbot_interface/include/mbot_interface/mbot_interface/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/mbot_interface/include/mbot_interface/mbot_interface/msg/detail/: person__builder.hpp  person__functions.h  person__rosidl_typesupport_fastrtps_cpp.hpp  person__rosidl_typesupport_introspection_cpp.hpp  person__struct.hpp  person__traits.hpp  person__type_support.c  person__type_support.cpp  person__type_support.h
install/mbot_interface/local/lib/python3.10/dist-packages/mbot_interface/: _mbot_interface_s.ep.rosidl_typesupport_c.c
install/mbot_interface/local/lib/python3.10/dist-packages/mbot_interface-0.0.0-py3.10.egg-info/: PKG-INFO  top_level.txt
install/mbot_interface/local/lib/python3.10/dist-packages/mbot_interface/msg/: __init__.py
install/mbot_interface/share/ament_index/resource_index/rosidl_interfaces/: mbot_interface
install/mbot_interface/share/mbot_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mbot_interface/share/mbot_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_mbot_interface__rosidl_generator_cExport-noconfig.cmake  export_mbot_interface__rosidl_generator_cExport.cmake  export_mbot_interface__rosidl_generator_pyExport.cmake  mbot_interfaceConfig.cmake  mbot_interface__rosidl_typesupport_cExport-noconfig.cmake  mbot_interface__rosidl_typesupport_cExport.cmake  mbot_interface__rosidl_typesupport_cppExport-noconfig.cmake  mbot_interface__rosidl_typesupport_cppExport.cmake  mbot_interface__rosidl_typesupport_introspection_cExport.cmake
install/mbot_interface/share/mbot_interface/msg/: Person.idl
install/mbot_pkg/lib/mbot_pkg/: mbot_manager
install/mbot_pkg/share/ament_index/resource_index/package_run_dependencies/: mbot_pkg
install/mbot_pkg/share/ament_index/resource_index/parent_prefix_path/: mbot_pkg
install/mbot_pkg/share/mbot_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mbot_pkg/share/mbot_pkg/launch/: mbot.launch.py
install/mbot_pkg/share/mbot_pkg/urdf/: mbot_base.urdf.xacro  mbot_gazebo.urdf.xacro
install/mbot_pkg/share/mbot_pkg/worlds/: empty_world.world
log/: latest_build
src/control/: CMakeLists.txt  package.xml
src/control/include/: path_follower.h  pid_controller.h
src/control/src/: control_node.cpp  path_follower.cpp  pid_controller.cpp
src/gazebo_pose_publisher/: CMakeLists.txt  package.xml
src/gazebo_pose_publisher/src/: gazebo_pose_publisher.cpp
src/mbot_interface/: CMakeLists.txt  package.xml
src/mbot_interface/include/mbot_interface/: GridMap.h  ImageProcess.h  KDTree.h  LaserScan.h  Odom.h  Pose2D.h  mbot_common.h
src/mbot_interface/msg/: GridMap.msg  Pose2D.msg
src/mbot_interface/src/: GridMap.cpp  ImageProcess.cpp  KDTree.cpp  LaserScan.cpp  Odom.cpp  main.cpp
src/mbot_pkg/: CMakeLists.txt  package.xml
src/mbot_pkg/config/: nav2_hybrid_astar_amcl_params.yaml  slam_params.yaml
src/mbot_pkg/include/mbot_pkg/: publisher.h
src/mbot_pkg/launch/: map.launch.py  mbot.launch.py  turtle.launch.py
src/mbot_pkg/maps/: map.yaml
src/mbot_pkg/src/: map_publisher.cpp  mbot_manager.cpp
src/mbot_pkg/urdf/: mbot_base.urdf.xacro  mbot_gazebo.urdf.xacro  output.urdf  test.urdf
src/mbot_pkg/worlds/: room.world  world_wall.world
src/mbot_pkg/worlds/room/: model.sdf
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/: Astar.h  GridNode.h  RandomTree.h  dwa.h  dynamic_simulate.h  hybrid_astar.h
src/navigation/src/: Astar.cpp  RandomTree.cpp  hybrid_astar.cpp  navigation_node.cpp
src/navigation/src/global_planner/: Astar.cpp  Astar.h
src/perception/: CMakeLists.txt  package.xml
src/slam/: CMakeLists.txt  package.xml
src/slam/include/: LaserScan.h  Pose2D.h  common.h
src/slam/src/: slam_node.cpp
src/slam/src/gmapping/: README.md  gmapping.cpp  gmapping.h  gridmap.h  particle.h  prticle.cpp  scanmatcher.cpp  scanmatcher.h
src/tools/: GenerateGridMap.py  GeneratePgm.py
